--- a/index.html
+++ b/index.html
@@ -6,30 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
     maximum-scale=1, minimum-scale=1, user-scalable=0">
     <title>Simple Casual</title>
-    <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/6.1.6/basscss.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6326032/647188/css/fonts.css" />
+    <link href="https://d2v52k3cl9vedd.cloudfront.net/basscss/6.1.6/basscss.min.css" rel="stylesheet">
     <style>
       body {
-        font-family: 'Ideal Sans SSm A', 'Ideal Sans SSm B', "Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
+        font-family:"Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
         font-weight: 300;
         font-style: normal;
         -webkit-font-smoothing: antialiased;
       }
 
       h1, h2, h3, h4, h5, strong, .strong {
-        font-family: 'Ideal Sans SSm A', 'Ideal Sans SSm B', "Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
+        font-family:"Avenir Next", "Avenir", "Helvetica Neue", helvetica, sans-serif;
         font-weight: 500;
       }
     </style>
   </head>
   <body>
     <div class="flex flex-center" style="min-height:100vh">
-  <div class="center p2 mx-auto">
-    <h1 class="m0 mb1">Simple Casual</h1>
-    <a href="http://simplecasual.slack.com">
-      <img src="eames-chair.svg" width="128">
-    </a>
-  </div>
-</div>
+      <div class="center p2 mx-auto">
+        <h1 class="m0 mb1">Simple Casual</h1>
+        <a href="https://simplecasual.slack.com">
+          <img src="eames-chair.svg" width="128">
+        </a>
+      </div>
+    </div>
   </body>
 </html>
